# Atividade_3_Equipe5_MCCC007-23_2024.3

./: README.md
examples/: CMakeLists.txt
examples/bloxorz/: CMakeLists.txt  camera.cpp  camera.hpp  direction.hpp  level.cpp  level.hpp  main.cpp  playerblock.cpp  playerblock.hpp  window.cpp  window.hpp
examples/bloxorz/assets/: phong.frag  phong.vert
examples/bloxorz/assets/shaders/: phong.frag  phong.vert
examples/bloxorz/levels/: level1.txt
examples/cube_trail/: cube.cpp  cube.hpp  ground.cpp  ground.hpp  main.cpp  vertex.hpp  window.cpp  window.hpp
examples/cube_trail/assets/: cube_trail.frag  cube_trail.vert  texture_light.frag  texture_light.vert
public/: cube_trail.data  cube_trail.html  cube_trail.js  cube_trail.wasm
